add admin update endpoint
